feat: deepwork and context switches
